--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- font-awesome-kit -->
     <script src="https://kit.fontawesome.com/780910c899.js" crossorigin="anonymous"></script>
     <!--Fav icon-->
-    <link rel="shortcut icon" type="image/jpg" href="images/match.png" />
+    <link rel="shortcut icon" type="image/jpg" href="images/football.png" />
 </head>
 
 <body>
