--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- font-awesome-kit -->
     <script src="https://kit.fontawesome.com/780910c899.js" crossorigin="anonymous"></script>
     <!--Fav icon-->
-    <link rel="shortcut icon" type="image/jpg" href="images/football.png" />
+    <link rel="shortcut icon" type="image/jpg" href="images/fut.png" />
 </head>
 
 <body>
@@ -123,7 +123,7 @@
     <!--------------Bonus Boncing Football------------->
     <section class="bouncing-ball">
         <div class="ball">
-            <img src="images/football.png" alt="A football">
+            <img src="images/fut.png" alt="A football">
         </div>
     </section>
 
